# PharmacyOS

./: .env  .gitignore  .replit  app.py  cohere_service.py  database.py  design_guidelines.md  init_db.py  main.py  manifest.json  models.py  openai_service.py  pharmacy.db  pyproject.toml  render.yaml  replit.md  requirements.txt  runtime.txt  setup.sh  test.db
client/src/: index.css
client/src/components/: customer-form.tsx  prescription-upload-form.tsx  stats-card.tsx  stock-badge.tsx  supplier-form.tsx  theme-toggle.tsx
client/src/pages/: analytics.tsx  customers.tsx  dashboard.tsx  inventory.tsx  (+1 more)
existing_code/PharmacyOS/: .replit  app.py  crud.py  database.py  models.py  openai_service.py  pyproject.toml
existing_code/PharmacyOS/client/: index.html
existing_code/PharmacyOS/client/src/components/: app-sidebar.tsx  drug-form.tsx
existing_code/PharmacyOS/client/src/pages/: ai-assistant.tsx  sales.tsx  suppliers.tsx
existing_code/PharmacyOS/shared/: schema.ts
existing_code/PharmacyOS/templates/: base.html
existing_code/PharmacyOS/templates/customers/: form.html
existing_code/PharmacyOS/templates/inventory/: form.html  list.html
existing_code/PharmacyOS/templates/prescriptions/: list.html
existing_code/PharmacyOS/templates/sales/: pos.html
src/: database.py  utils.py
src/middleware/: auth.py
src/services/: openai_service.py
templates/: ai_chat.html  customers.html  dashboard.html  inventory.html  landing.html  login.html  pos.html  register.html  staff.html
templates/customers/: list.html
templates/prescriptions/: upload.html
